Fixed 'AskForDownloadDirectory' Cancel does not work correctly

--- a/SFDL.NET 3/SelectContainerDownloadPathPopUp.xaml
+++ b/SFDL.NET 3/SelectContainerDownloadPathPopUp.xaml
@@ -91,7 +91,7 @@
                 Margin="5"
                 BorderBrush="{DynamicResource AccentColorBrush2}"
                 BorderThickness="1"
-                Command="{Binding OKCommand}">
+                Command="{Binding OKCommand}" IsDefault="True">
                     <StackPanel Orientation="Horizontal">
                         <Rectangle
                         Width="16"
