--- a/SFDL.NET 3/SelectContainerDownloadPathPopUp.xaml
+++ b/SFDL.NET 3/SelectContainerDownloadPathPopUp.xaml
@@ -1,30 +1,19 @@
-﻿<simpleChildWindow:ChildWindow
+﻿<UserControl
                                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                               xmlns:simpleChildWindow="clr-namespace:MahApps.Metro.SimpleChildWindow;assembly=MahApps.Metro.SimpleChildWindow"
                                xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
                                xmlns:p="clr-namespace:SFDL.NET3.My.Resources"
                                x:Class="SelectContainerDownloadPathPopUp"
-                               Title="Select SFDL Container Folder"
-                               BorderBrush="{DynamicResource AccentBaseColorBrush}"
-                               BorderThickness="1"
-                               CloseOnOverlay="True"
-                               GlowBrush="{DynamicResource AccentColorBrush2}"
-                               ShowCloseButton="True"
-                               AllowMove="True" 
-                               mc:Ignorable="d">
+                               mc:Ignorable="d"
+                               d:DesignHeight="100"
+                               d:DesignWidth="300" >
 
-    <simpleChildWindow:ChildWindow.OverlayBrush>
-        <SolidColorBrush Opacity="0.8" Color="{StaticResource Gray2}" />
-    </simpleChildWindow:ChildWindow.OverlayBrush>
-
-    <simpleChildWindow:ChildWindow.Resources>
+    <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/Icons.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedSingleRowTabControl.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary>
                     <Style
@@ -62,16 +51,11 @@
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </simpleChildWindow:ChildWindow.Resources>
+    </UserControl.Resources>
 
     <Grid>
 
         <StackPanel Margin="10">
-
-            <TextBlock Margin="0,0,0,10"
-		           FontSize="30"
-		           FontWeight="Thin"
-		           Text="Choose Download Folder" />
             <TextBox
                                                 x:Name="TxtDownloadPath"
                                                 Margin="0,0,0,10"
@@ -111,7 +95,7 @@
                     </StackPanel>
                 </Button>
 
-                <Button
+                <!--<Button
                 x:Name="CMD_Cancel"
                 MaxWidth="100"
                 MaxHeight="30"
@@ -136,11 +120,11 @@
                         FontSize="12"
                         Text="{x:Static p:Strings.VariousStrings_CancelButton}" />
                     </StackPanel>
-                </Button>
+                </Button>-->
 
             </StackPanel>
 
         </StackPanel>
 
     </Grid>
-</simpleChildWindow:ChildWindow>
+</UserControl>
