--- a/SFDL.NET 3/SettingsWindow.xaml
+++ b/SFDL.NET 3/SettingsWindow.xaml
@@ -148,11 +148,18 @@
                                                     IsChecked="{Binding InstantVideo}" />
                                                 <CheckBox
                                                     x:Name="ChkSearchUpdates"
-                                                    Margin="5,5,5,0"
+                                                    Margin="5"
                                                     HorizontalAlignment="Left"
                                                     VerticalAlignment="Top"
                                                     Content="{x:Static p:Strings.Settings_SearchUpdates}"
                                                     IsChecked="{Binding SearchUpdates}" />
+                                                <CheckBox
+                                                    x:Name="ChkMinimizeToTray"
+                                                    Margin="5,5,5,0"
+                                                    HorizontalAlignment="Left"
+                                                    VerticalAlignment="Top"
+                                                    Content="{x:Static p:Strings.Settings_Send2Tray}"
+                                                    IsChecked="{Binding MinimizeToTray}" />
 
                                             </StackPanel>
 
