--- a/SFDL.NET 3/SelectContainerDownloadPathPopUp.xaml
+++ b/SFDL.NET 3/SelectContainerDownloadPathPopUp.xaml
@@ -1,24 +1,23 @@
 ﻿<UserControl
-                               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                               xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                               xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                               xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
-                               xmlns:p="clr-namespace:SFDL.NET3.My.Resources"
-                               x:Class="SelectContainerDownloadPathPopUp"
-                               mc:Ignorable="d"
-                               d:DesignHeight="100"
-                               d:DesignWidth="300" >
+xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+xmlns:p="clr-namespace:SFDL.NET3.My.Resources"
+x:Class="SelectContainerDownloadPathPopUp"
+mc:Ignorable="d"
+d:DesignHeight="100"
+d:DesignWidth="300" >
 
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Resources/Icons.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary>
                     <Style
                         x:Key="OpenFileMetroTextBox"
-                        BasedOn="{StaticResource ButtonCommandMetroTextBox}"
+                        BasedOn="{StaticResource MahApps.Styles.TextBox.Button}"
                         TargetType="{x:Type TextBox}">
                         <Setter Property="Controls:TextBoxHelper.ButtonTemplate">
                             <Setter.Value>
@@ -73,7 +72,7 @@
                 MaxWidth="100"
                 MaxHeight="30"
                 Margin="5"
-                BorderBrush="{DynamicResource AccentColorBrush2}"
+                BorderBrush="{DynamicResource MahApps.Brushes.Accent2}"
                 BorderThickness="1"
                 Command="{Binding OKCommand}" IsDefault="True">
                     <StackPanel Orientation="Horizontal">
@@ -81,9 +80,9 @@
                         Width="16"
                         Height="16"
                         Margin="0,0,10,0"
-                        Fill="{DynamicResource AccentColorBrush}">
+                        Fill="{DynamicResource MahApps.Brushes.Accent}">
                             <Rectangle.OpacityMask>
-                                <VisualBrush Stretch="Uniform" Visual="{StaticResource appbar_check}" />
+                                <VisualBrush Stretch="Uniform" Visual="{iconPacks:Modern Kind=Check}"  />
                             </Rectangle.OpacityMask>
                         </Rectangle>
                         <TextBlock
